add checking for adding to cart (if type is home try and more than 5 in cart lardy, show error), show 'free' for hometryon products, change hometryon products to be $0, add zip,apt,city,country fields to user profile, add customers & orders for admin CMS, fix admin logout issue (wrong file)

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,10 @@ body {
     text-align: center;
 }
 
+a {
+    color: #000;
+}
+
 /*======*/
 
 ul {
@@ -193,6 +197,10 @@ td {
     vertical-align: top;
 }
 
+div {
+    margin: 4px 1px;
+}
+
 /*  HEADER BAR */
 #logoheader, #user , .swatch{
     cursor:pointer;
@@ -229,7 +237,7 @@ td {
     right: 15px;
 }
 
-.rightheader ul {
+.rightheader ul, .nolist {
     list-style-type: none;
     margin: 0;
 }
@@ -906,7 +914,7 @@ div.product_display.col-md-6 {
     border: 1px solid #ccc!important;
     background-color: #fff;
     text-decoration: none;
-    color: #000;
+    color: #000!important;
     margin: 10px;
     padding: 10px;
 }
@@ -1277,4 +1285,9 @@ textarea {
 
 #reviewCosts {
     text-align: right;
+}
+
+.padded {
+    padding: 5px;
+    margin-left: 5px;
 }
