--- a/styles.css
+++ b/styles.css
@@ -18,16 +18,24 @@ html {
 body { 
     line-height: 21px!important;
     font-size: 12px!important;
-    font-family: 'Alright Sans-Light'!important;
+    font-family: 'Alright Sans-Light', serif!important;
     letter-spacing: 1px;
     background-color: #fff!important;
 }
 
 * {
     color: #000!important;
+    letter-spacing: 1px;
 }
 
 /*======*/
+
+.cke_editable {
+    font-family: 'Alright Sans-Light'!important;
+    font-size: 12px!important;
+    line-height: 1.3em!important;
+    letter-spacing: 1px!important;
+}
 
 ul {
     margin: 0;
@@ -58,6 +66,14 @@ ul {
 
 /* FORM STYLE */
 
+.form-control {
+    border-radius: 0!important;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: none;
+    transition: none;
+}
+
 form {
     margin-bottom: 0px!important;
 }
@@ -69,12 +85,12 @@ form {
 }
 
 input, textarea, select{
-    font-family:inherit;
-    font-size: inherit;
+    font-family:inherit!important;
+    font-size: inherit!important;
 }
 
-input[type=text], input[type=password], select{
-    width: 100%;
+input[type=search], input[type=text], input[type=password], select{
+    width: 100%!important;
     height: 50px;
     padding: 15px 15px;
     margin: 2px 0;
@@ -92,13 +108,13 @@ textarea {
     box-sizing: border-box;
 }
 
-.button, input[type=button], input[type=submit], input[type=reset] {
-    background-color: #808080;
+button, input[type=button], input[type=submit], input[type=reset] {
+    background-color: #707070;
     height: 50px;
     border: none;
     color: #fff!important;
+    margin: 2px 0;
     padding: 15px 50px;
-    margin-top: 8px;
     text-transform: uppercase;
 }
 
@@ -116,7 +132,7 @@ table {
     border-collapse: collapse;
     font-family: inherit;
     font-size: inherit;
-    margin-right: 30px;
+    /*margin-right: 30px;*/
     margin-bottom: 30px;
     width: 100%;
 }
@@ -138,6 +154,7 @@ table {
 .content td {
     text-align: left;
     padding: 10px 15px;
+    vertical-align: top;
 }
 
 .content-sub {
@@ -153,6 +170,7 @@ table {
 }
 
 .content-sub td {
+    vertical-align: top;
     text-align: left;
     padding: 0;
 }
@@ -186,7 +204,11 @@ tr {
 td {
     padding: 15px 30px;
     text-align: center;
-    vertical-align: top;
+}
+
+table.dataTable thead .sorting:after, table.dataTable thead .sorting_asc:after, 
+table.dataTable thead .sorting_desc:after{
+    top: 15px!important;
 }
 
 /*  HEADER BAR */
@@ -209,14 +231,11 @@ td {
     background-position: center center;
 }
 
-.blog_logo {
+.navbar-blog {
     text-align: center;
-    margin: 0 30%;
-    min-width: 200px;
-    background-image: url(images/HorizontalLogo_black.png);
-    background-repeat: no-repeat;
-    background-size: auto 25px;
-    background-position: 0 center;
+    margin: auto;
+    height: 30px;
+    padding: 0px 15px;
 }
 
 .rightheader {
@@ -370,6 +389,17 @@ td {
     display: flex;
 }
 
+#header {
+    height: 50px;
+    padding: 15px 10px;
+    margin-bottom: 30px;
+}
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .rightfooter {
     position: absolute;
     top: 0px;
@@ -441,12 +471,19 @@ a:hover, .left_nav a:hover:not(.active), #terms_nav a:hover:not(.active), .produ
     height: 3em;
 }
 
+.blog_footer {
+    padding: 30px 200px;
+    text-align: center;
+    background-color: #dddddd;
+}
+
 #showGlasses, #showSunglasses, #showStory {
     cursor: pointer;
 }
 
 #glasses, #sunglasses, #ourstoryheader, #userMenu {
     width: 100%;
+    height: auto;
     text-align: center;
     margin: 0 auto;
 /*    cursor: pointer;*/
@@ -456,18 +493,32 @@ a:hover, .left_nav a:hover:not(.active), #terms_nav a:hover:not(.active), .produ
 }
 
 #glasses ul, #sunglasses ul, #ourstoryheader ul, .colours ul {
+    width: 100%;
     list-style-type: none;
-    display: inline-block;
+    /*display: inline-block;*/
 }
 
 #glasses li , #sunglasses li {
-    float: left;
+    width: 100%;
+    display: inline-block;
+    max-width: 47.5%;
+    margin: 15px 10px;
+    /*float: left;*/
     /*margin-top: 5px;*/
-    margin: 15px;
+}
+
+#glasses li:first-child , #sunglasses li:first-child {
+    margin-left: 15px!important;
+}
+
+#glasses li:last-child , #sunglasses li:last-child {
+    margin-right: 15px!important;
 }
 
 #glasses .button, #sunglasses .button {
-    padding: 50px 240px 70px 230px;
+    width: 100%;
+    height: 150px;
+    /*padding: 50px 240px 70px 230px;*/
 }
 
 #ourstoryheader li {
@@ -694,10 +745,11 @@ a:hover#heart {
     margin: auto;
     overflow-wrap: break-word;
     word-wrap: break-word;
+    margin-bottom: 30px;
 }
 
 .blog_post img{
-    width: 100%;
+    width: 80%;
     margin: auto;
 }
 
@@ -785,7 +837,6 @@ div.panel.show {
     text-align: center;
     margin: 15px 20px;
     height: 50%;
-
 }
 
 .thumbnail {
@@ -1114,6 +1165,7 @@ div#calendar {
 
 .navbar-logo {
     height: 100%;
+    width: auto;
 }
 
 .side-nav li a:hover {
@@ -1195,4 +1247,32 @@ textarea {
     width: 100%;
     resize: none;
     padding: 15px 15px;
+}
+
+.search {
+    text-align: left;
+    width: 100%;
+}
+
+div.dataTables_filter {
+    text-align: left;
+}
+
+div.dataTables_filter.label.form-control .input-sm {
+    width:100%!important;
+}
+
+/* LOADING GIF */
+/* This only works with JavaScript, 
+if it's not present, don't show loader */
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url(icons/Preloader_8.gif) center no-repeat #fff;
 }
