--- a/styles.css
+++ b/styles.css
@@ -401,7 +401,7 @@ table.dataTable thead .sorting_desc:after{
 
 #header {
     height: 50px;
-    padding: 15px 10px;
+    /*padding: 15px 10px;*/
     margin-bottom: 30px;
 }
 
