fix tags not displaying on blog page issue, fix tags css files affecting nav bar on admin side issue

--- a/selectize/css/stylesheet.css
+++ b/selectize/css/stylesheet.css
@@ -78,10 +78,12 @@ p, .control-group {
 #wrapper {
 	margin: 0;
 }
+/* 
 #wrapper > * {
 	padding-left: 100px;
 	padding-right: 100px;
 }
+ */
 pre {
 	background: #f8f8f8;
 	border: 1px solid #f2f2f2;
