add discount code to checkout process, add amount field to discount creation (admin CMS), change all error/success messages in admin CMS to show colour.

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,11 @@ ul {
     padding-right: 30px;
 }
 
+.success {
+    color: green!important;
+    padding: 5px;
+}
+
 .error {
    color: red!important; 
    padding: 5px;
