added function for using existing credit at checkout, settings to set credit amount for completing profile (admin)

--- a/styles.css
+++ b/styles.css
@@ -1412,3 +1412,8 @@ if it's not present, don't show loader */
 .addMore {
     cursor: pointer;
 }
+
+#completeProfile {
+/*    float: left;
+    text-align: center!important;*/
+}
