--- a/styles.css
+++ b/styles.css
@@ -258,11 +258,6 @@ table.dataTable thead .sorting_desc:after{
     margin: 0;
 }
 
-.close_modal {
-    right: 20px;
-    top: 10px;
-}
-
 #frameheader{
     height: 50px;
     width: 100%;
@@ -919,11 +914,6 @@ div.panel.show {
     height: 100%;
 }
 
-.img-responsive {
-    width: 100%!important;
-    margin: 0 auto!important;
-}
-
 .carousel-inner {
     text-align: center;
     margin: auto;
@@ -1166,36 +1156,6 @@ div#calendar {
     padding: 20px;
 }
 
-#searchModal .modal-dialog, #myModal .modal-dialog{
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-#searchModal .modal-content, #myModal .modal-content  {
-  height: auto;
-  min-height: 100%;
-  border-radius: 0;
-}
-
-#searchModal .modal, #myModal .modal {
-    overflow-y: hidden!important;
-}
-
-.modal.modal-fullscreen .modal-content {
-    /*background: rgba(192,192,192, 0.2);*/
-}
-
-.modal.modal-fullscreen .modal-header {
-  border: 0;
-  color: #fff;
-}
-
-.modal.modal-fullscreen .modal-footer {
-  /*border-color: rgba(192,192,192, 0.2);*/
-}
-
 .cart_button {
     background-color: #808080;
     height: 50px;
@@ -1386,4 +1346,104 @@ if it's not present, don't show loader */
 
 .prodbanners {
     z-index: 0;
+}
+
+/* MODAL LAYOUT */
+
+@media (min-width: 768px){    
+    #imagemodal .modal-content {
+        border-radius: 0;
+        border: 0;
+        background-color: initial!important;
+    }
+    
+    #myModal .modal-dialog {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    
+    #myModal .modal-content {
+        height: auto;
+        min-height: 100%;
+        border-radius: 0;
+        border: 0;
+    }
+    
+    #myModal .modal {
+        overflow-y: hidden!important;
+    }
+}
+
+#searchModal .modal-dialog, #myModal .modal-dialog{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#searchModal .modal-content, #myModal .modal-content  {
+    height: auto;
+    min-height: 100%;
+    border-radius: 0;
+    border: 0;
+}
+
+#searchModal .modal, #myModal .modal {
+    overflow-y: hidden!important;
+}
+
+.modal.modal-fullscreen .modal-content {
+    /*background: rgba(192,192,192, 0.2);*/
+}
+
+.modal.modal-fullscreen .modal-header {
+  border: 0;
+  color: #fff;
+}
+
+.modal.modal-fullscreen .modal-footer {
+  /*border-color: rgba(192,192,192, 0.2);*/
+}
+
+.close {
+    height: initial!important;
+    color: initial!important;
+    /*padding-bottom: 10px!important;*/
+}
+
+.close_modal {
+    right: 20px;
+    top: 10px;
+}
+
+.img-responsive {
+    width: 100%!important;
+    margin: 0 auto!important;
+}
+
+.img-grid{
+  object-fit: cover;
+  height: 200px;
+  width: 100%;
+}
+
+.img-modal {
+    width: 100%;
+    z-index:0;
+}
+
+.btn-overlay {
+    background-color: initial!important;
+    margin: 0!important;
+    padding: 0!important;
+    float: right!important;
+    position: absolute!important;
+    z-index:1;
+}
+
+.img-col {
+    padding-top: 15px!important;
+    padding-bottom: 15px!important;
 }
