fix logout issue, adding POS to web (in progress), adding home try collection delivery request (in progress)

--- a/styles.css
+++ b/styles.css
@@ -1582,3 +1582,8 @@ input#search:focus {
     background-color: #cccccc;
     color:#fff!important;
 }
+
+.pos {
+    width: 100%!important;
+    background-color: #ffffff;
+}
