--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* VM FONTFACE */
 @font-face{
     font-family: 'Alright Sans-Light';
     src: url(font/AlrightSans-Light-v3.otf);
@@ -8,6 +9,7 @@
     src: url(font/AlrightSans-Medium-v3.otf);
 }
 
+/* GENERAL */
 html { 
     font-size: 62.5%; 
     -webkit-touch-callout:none; 
@@ -24,7 +26,6 @@ body {
 }
 
 * {
-    color: #333333!important;
     letter-spacing: 0.1em!important;
 }
 
@@ -88,12 +89,12 @@ ul {
 #page-wrapper {
     width: 100%!important;
     padding-top: 20px;
+    padding-bottom: 15px;
     background-color: #fff!important;
     overflow: overlay!important;
 }
 
 /* FORM STYLE */
-
 .form-control {
     border-radius: 0!important;
     -webkit-box-shadow: none;
@@ -117,34 +118,44 @@ input, textarea, select{
     font-size: inherit!important;
 }
 
-input[type=search], input[type=text], input[type=password], select{
-    width: 100%!important;
-    height: 50px;
-    padding: 15px 15px;
-    margin: 2px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-}
-
 textarea {
     width: 100%;
-    padding: 15px 15px;
+    padding: 10px 10px;
     margin: 2px 0;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
 
-button, input[type=button], input[type=submit], input[type=reset] {
+input[type=search], input[type=text], input[type=password], select{
+    width: 100%!important;
+    height: 45px;
+    padding: 10px 10px;
+    margin: 2px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+button, input[type=button], input[type=submit] {
     background-color: #707070;
-    height: 50px;
+    height: 45px;
     border: none;
     color: #fff!important;
     margin: 2px 0;
-    padding: 15px 50px;
+    padding: 10px 30px;
     text-transform: uppercase;
 }
+
+input[type=reset] {
+    background-color: #fff;
+    height: 45px;
+    border: 1px solid #707070;
+    margin: 2px 0;
+    padding: 10px 30px;
+    text-transform: uppercase;
+}
+/* END: FORM LAYOUT*/
 
 .product-button {
     background-color: #808080;
@@ -154,25 +165,16 @@ button, input[type=button], input[type=submit], input[type=reset] {
     text-transform: uppercase;
 }
 
-/*TABLE LAYOUTS*/
-
+/* TABLE LAYOUT */
 table {
     border-collapse: collapse;
     font-family: inherit;
     font-size: inherit;
-    /*margin-right: 30px;*/
     margin-bottom: 30px;
     width: 100%;
 }
-
-#content h3, .updateProfile, #mailingWrapper, #emptyCart {
-    text-align: center;
-    margin: 0;
-}
-
-#mailingWrapper {
-    margin: 20px;
-    height: 330px;
+.content {
+    margin-bottom: 0;
 }
 
 .content tr {
@@ -238,9 +240,19 @@ table.dataTable thead .sorting:after, table.dataTable thead .sorting_asc:after,
 table.dataTable thead .sorting_desc:after{
     top: 15px!important;
 }
+/* END: TABLE LAYOUT */
+
+#content h3, .updateProfile, #mailingWrapper, #emptyCart {
+    text-align: center;
+    margin: 0;
+}
+
+#mailingWrapper {
+    margin: 20px;
+    height: 330px;
+}
 
 /*  HEADER BAR */
-
 #maintenanceMsg {
     padding: 100px;
     margin: 100px;
@@ -291,7 +303,6 @@ table.dataTable thead .sorting_desc:after{
 }
 
 /* SIDE NAVIGATION BAR */
-
 #framecontent{
     position: fixed;
     top: 50px;
@@ -306,15 +317,6 @@ table.dataTable thead .sorting_desc:after{
 #settingslist, #weblist {
     font-family: inherit;
     font-size: inherit;
-}
-
-.logo_sidebar {
-    max-width: 200px;
-    margin-left: 15px;
-    background-size: auto 25px;
-    background-image: url(images/HorizontalLogo_black.png);
-    background-repeat: no-repeat;
-    background-position: 0 center;
 }
 
 .subcontent {
@@ -349,7 +351,6 @@ table.dataTable thead .sorting_desc:after{
 }
 
 /* MAIN CONTENT */
-
 #maincontent{
     position: fixed;
     top: 50px; 
@@ -1205,15 +1206,59 @@ div#calendar {
     }
 }
 
+.bc-bottom {
+    width: 100%;
+    padding: 15px 15px 0px;
+    border-top: 1px solid #e9e9e9;
+    font-size: inherit;
+}
+
+.bc-top {
+    width: 100%;
+    padding: 15px 20px 10px;
+    border-bottom: 1px solid #ccc;
+    font-size: 16px;
+}
+
+.bc-img {
+    margin-right: 15px;
+}
+
+.sb-img {
+    margin-right:5px;
+}
+
 .side-nav {
-    background-color: #f2f2f2!important;
+    background-color: #31373d!important;
     text-align: left;
     margin-top: 0px;
     margin-bottom: 0px;
+    color: #ffffff;
 }
 
 .side-nav > li > ul > li.active {
-    background-color: #dddddd!important;
+    background-color: #454e57!important;
+}
+
+@media (min-width: 768px){
+    .side-nav {
+        position: fixed;
+        top: 50px;
+        left: 225px;
+        width: 225px;
+        margin-left: -225px;
+        border: none;
+        border-radius: 0;
+        overflow-y: auto;
+        background-color: #222;
+        bottom: 0;
+        overflow-x: hidden;
+        padding-bottom: 10px;
+    }
+}
+
+.navbar-inverse .navbar-nav > li, .navbar-inverse .navbar-nav > li > a {
+    color: #798c9c;
 }
 
 .navbar-inverse .navbar-toggle, .navbar-inverse .navbar-toggle:focus, navbar-inverse .navbar-toggle:hover {
@@ -1234,8 +1279,8 @@ button .navbar-toggle {
 }
 
 .navbar-inverse {
-    background-color: #fff!important;
-    border-color: #ccc!important;
+    background-color: #272d30!important;
+    border: none!important;
 }
 
 .navbar-header {
@@ -1320,15 +1365,19 @@ button .navbar-toggle {
 }
 
 .side-nav li a:hover, .side-nav li a:focus {
-    background-color: #dddddd!important;
+    background-color: #454e57!important;
 }
 
 .navbar-nav > .active > a {
-    background-color: #dddddd!important;
+    background-color: #454e57!important;
 }
 
 .navbar-nav > li > a {
     padding: 10px 15px;
+}
+
+.top-nav > li, .top-nav > li > a {
+    color: #eeeeee;
 }
 
 .top-nav > li > a {
@@ -1341,7 +1390,7 @@ button .navbar-toggle {
 
 .top-nav > li > a:hover, .top-nav > .open > a:hover, .top-nav > .open > a:focus {
     background-color: initial!important;
-    color: #000!important;
+    color: #ffffff!important;
 }
 
 /* Toggle Navigation */
@@ -1366,11 +1415,11 @@ button .navbar-toggle {
 }
 
 /* Main Content */
-
+/*
 h1 {
     letter-spacing: 0.1em!important;
     font-size: 20px!important;
-}
+}*/
 
 h5 {
     letter-spacing: 0.1em!important;
@@ -1571,10 +1620,10 @@ input#search:focus {
 .addMore {
     cursor: pointer;
 }
-
+/*
 .padded-input {
     margin: 10px 0;
-}
+}*/
 
 .ticker {
     text-align: center;
@@ -1582,3 +1631,111 @@ input#search:focus {
     background-color: #cccccc;
     color:#fff!important;
 }
+
+/* START: TABS LAYOUT */
+.nav-tabs{
+    background-color:#eee;
+    border: 1px solid #e9e9e9;
+}
+
+.tab-content{
+    background-color: #fff;
+    border: 1px solid #e9e9e9;
+    margin-top: -1px;
+    padding: 20px;
+}
+
+.nav-tabs > li > a {
+    margin-top: -1px;
+    margin-left: -1px;
+    border-radius: 0;
+    color: #808080;
+    padding: 15px 20px;
+}
+
+.nav-tabs > li > a:active{
+    background-color: #fff;
+    border-radius: 0;
+    color: #454545;
+}
+
+.nav-tabs > li > a:hover{
+    background-color: #dddddd;
+    border-radius: 0;
+    color: #454545;
+}
+
+ul.nav-tabs li a{
+    margin-right: -1px;
+}
+
+.content-tabs .nav-pills>li {
+    display: block;
+    background-color: #ccc;
+    border-radius: 0;
+    padding: 10px;
+}
+
+.content-tabs .nav-pills>li.active {
+    display: block;
+    background-color: #999;
+    border-radius: 0;
+    padding: 10px;
+}
+
+.content-tabs .nav-pills>li.active>a {
+    background-color: #999;
+}
+/* END: TABS LAYOUT */
+
+/* START: OVERRIDE SELECTIZE INPUT */
+.selectize-input {
+    box-shadow: none!important;
+    -webkit-box-shadow: none!important;
+    border-radius: 0!important;
+    -webkit-border-radius: 0!important;
+    font-size: inherit!important;
+    line-height: inherit!important;
+}
+/* END: OVERRIDE SELECTIZE INPUT */
+
+/* START: CMS LAYOUT */
+/* VM THEME */
+.vm-padding-r-clear {
+    padding-right: 0!important;
+}
+
+.vm-padding-l-clear {
+    padding-left: 0!important;
+}
+
+.vm-margin-t-clear {
+    margin-top: 0!important;
+}
+
+.vm-padding-t-15 {
+    padding-top: 15px!important;
+}
+
+.vm-margin-t-20 {
+    margin-top: 20px;
+}
+
+.vm-margin-t-30 {
+    margin-top: 30px;
+}
+
+.vm-center {
+    text-align: center; 
+}
+
+.vm-container {
+    border: 1px solid #e9e9e9;
+    padding: 20px;
+}
+
+/* COLOR */
+.bg-white {
+    background-color: #ffffff;
+}
+/* END: CMS LAYOUT */
